--- a/Bank of Waern.csproj
+++ b/Bank of Waern.csproj
@@ -7,6 +7,7 @@
     <RootNamespace>Bank_of_Waern</RootNamespace>
     <UserSecretsId>0eda8012-2050-436b-9355-f043d328a1e6</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
